--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ghana Weather Forecast</title>
-    <meta name="description" content="Weather forecast for Ghana" />
+    <meta name="description" content="Weather forecast right within Ghana" />
     <meta name="author" content="Lovable" />
     <link rel="stylesheet" href="styles.css">
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
@@ -74,7 +74,7 @@
       </main>
 
       <footer>
-        <p>© <span id="current-year"></span> Ghana Weather Forecast App</p>
+        <p>© <span id="current-year"></span> Ghana Weather Forecast Site</p>
         <p>Data provided for demonstration purposes</p>
       </footer>
     </div>
